--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 button {
-    width: 200px;
-    height: 50px;
-    font-size: 10px;
-   
+  width: 200px;
+  height: 50px;
+  font-size: 10px;
+  
 }
 #text {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
 }
 #subtext {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 20px;
-    text-align: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+#submit.button {
+  width: 50%;
 }
