--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ button {
   width: 200px;
   height: 50px;
   font-size: 10px;
-  
 }
 #text {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -14,4 +13,9 @@ button {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 20px;
   text-align: center;
+}
+#initiallabel {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  margin: auto;
 }
