--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 button {
   width: 200px;
   height: 50px;
@@ -17,5 +22,13 @@ button {
 #initiallabel {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 20px;
-  margin: auto;
+  margin-top: 10px;
+ margin-right: 10px;
+}
+form {
+  margin: auto;  
+  
+}
+#answerCheck {
+    transition: 1s;
 }
