--- a/style.css
+++ b/style.css
@@ -23,13 +23,23 @@ button {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 20px;
   margin-top: 10px;
- margin-right: 10px;
+  margin-right: 10px;
 }
 form {
-  margin: auto;  
-  
+  margin: auto;
 }
 .container {
   align-items: center;
-justify-content: center;
+  justify-content: center;
+}
+.HighscoresInitial {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  margin: auto;
+}
+.HighscoresScore {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  margin-top: 10px;
+  margin: auto;
 }
