--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 button {
   width: 200px;
   height: 50px;
-  font-size: 10px;
+  padding: auto;
 }
 #text {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -19,14 +19,25 @@ button {
   font-size: 20px;
   text-align: center;
 }
-#initiallabel {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 20px;
-  margin-top: 10px;
-  margin-right: 10px;
+
+#initial {
+  width: 100%;
+}
+#submit,
+#start {
+  font-size: 25px;
+}
+#answer1,
+#answer2,
+#answer3,
+#answer4 {
+  font-size: 17px;
 }
 form {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
   margin: auto;
+  text-align: center;
 }
 .container {
   align-items: center;
@@ -43,3 +54,8 @@ form {
   margin-top: 10px;
   margin: auto;
 }
+#answerCheck {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 25px;
+  font-weight: bolder;
+ }
