--- a/style.css
+++ b/style.css
@@ -43,6 +43,17 @@ form {
   align-items: center;
   justify-content: center;
 }
+#highScorePg {
+  border: none;
+  background-color: white;
+}
+#highScorePg:hover{
+  background-color: teal;
+}
+#highScorePg:active{
+  border: block;
+  background-color: teal;
+}
 .HighscoresInitial {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 20px;
