--- a/style.css
+++ b/style.css
@@ -1,30 +1,18 @@
+/* GENERAL STYLES */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+.container {
+  align-items: center;
+  justify-content: center;
+}
+/* Button */
 button {
   width: 200px;
   height: 50px;
   padding: auto;
-}
-#text {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 40px;
-  font-weight: bold;
-  text-align: center;
-}
-#subtext {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 20px;
-  text-align: center;
-}
-#storetext {
-
-  text-align: center;
-}
-#initial {
-  width: 100%;
 }
 #submit,
 #start {
@@ -36,16 +24,6 @@ button {
 #answer4 {
   font-size: 17px;
 }
-form {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 30px;
-  margin: auto;
-  text-align: center;
-}
-.container {
-  align-items: center;
-  justify-content: center;
-}
 #highScorePg {
   border: none;
   background-color: white;
@@ -53,7 +31,42 @@ form {
 #highScorePg:hover{
   background-color: teal;
 }
+#clear , #goBack {
+  align-content: center;
+  margin: auto;
+}
 
+/* Main text */
+#text {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+}
+/* Subtext */
+#subtext {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+/* Storetext */
+#storetext {
+
+  text-align: center;
+}
+/* Input initial */
+#initial {
+  width: 100%;
+}
+/* Result page */
+form {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
+  margin: auto;
+  text-align: center;
+}
+
+/* Highscores page */
 .HighscoresInitial {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 20px;
@@ -65,14 +78,12 @@ form {
   margin-top: 10px;
   margin: auto;
 }
+/* answercheck */
 #answerCheck {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 25px;
   font-weight: bolder;
  }
- #clear , #goBack {
-   align-content: center;
-   margin: auto;
- }
+ 
  
   
